# obsidian-agent

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/obsidian_agent/: __init__.py  mcp_server.py
